# waybg

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  README.md  build.zig  build.zig.zon  justfile
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: ci-release.yml
crates/waybg-cli/: Cargo.toml
crates/waybg-cli/src/: main.rs
crates/waybg-cli/tests/: niri_embedded.rs
crates/waybg-core/: Cargo.toml
crates/waybg-core/src/: lib.rs
crates/waybg-core/tests/: core_api.rs
crates/waybg-daemon/: Cargo.toml
crates/waybg-daemon/src/: lib.rs  main.rs
crates/waybg-ui/: Cargo.toml
crates/waybg-ui/src/: lib.rs  main.rs
crates/wayland-core/: Cargo.toml
crates/wayland-core/src/: lib.rs
src/: main.rs
tests/: niri_embedded.rs
xtask/src/: main.rs
