[package]
name = "waybg-cli"
version = "0.1.0"
edition = "2024"
autobins = false

[dependencies]
clap = { version = "4.5.58", features = ["derive"] }
waybg-core = { path = "../waybg-core" }
waybg-daemon = { path = "../waybg-daemon" }
waybg-ui = { path = "../waybg-ui" }
wayland-core = { path = "../wayland-core" }

[[bin]]
name = "waybg"
path = "src/main.rs"

[dev-dependencies]
image = { version = "0.25.9", default-features = false, features = ["png"] }
tempfile = "3.25.0"
