[package]
name = "waybg-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
clap = { version = "4.5.58", features = ["derive"] }
freya = "0.4.0-rc.9"
notify-rust = "4.11.7"
plotters = { version = "0.3.7", default-features = false, features = ["line_series", "svg_backend"] }
serde_json = "1.0.145"
toml = "1.0.1"
waybg-core = { path = "../waybg-core" }
wayland-core = { path = "../wayland-core" }
